test/classes/initializers/phase1/sendFieldToFuncModsField.good
sendFieldToFuncModsField.chpl:4: In initializer:
sendFieldToFuncModsField.chpl:6: error: can't pass field "x" as an actual to a function that modifies it during phase 1 of initialization
